fix: fix breadcumb alignment after tertiary button changes

--- a/packages/dnb-eufemia/src/components/breadcrumb/style/_breadcrumb.scss
+++ b/packages/dnb-eufemia/src/components/breadcrumb/style/_breadcrumb.scss
@@ -41,6 +41,12 @@
     }
   }
 
+  &__item:not(:first-of-type) {
+    .dnb-button.dnb-button--has-text {
+      padding-left: 0.5rem;
+    }
+  }
+
   &__animation {
     display: flex;
     flex-direction: column;
